--- a/src/css/resources.css
+++ b/src/css/resources.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Cabin');
 
 :root {
-  --basecol: #220427;
+  --basecol: #3f0748;
   --hl1: #26b297;
   --hl2: #2ee9ff;
   --hl3: #ffe324;
